# ppkMHD

./: .clangd  .cmake-format.py  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  HydroBaseFunctor.h  HydroRun.cpp  LICENSE  Makefile  README.md  _typos.toml
src/: CMakeLists.txt  main.cpp  ppkMHD_version.h.in
src/hydro_muscl/: CMakeLists.txt  HydroBaseFunctor.h  HydroBaseFunctor2D.h  HydroBaseFunctor3D.h  HydroParams.h  HydroRun.cpp  HydroRun.h  HydroRun2D.cpp  HydroRun2D.h  HydroRun3D.cpp  HydroRun3D.h  HydroRunFunctors.h  HydroRunFunctors2D.h  HydroRunFunctors3D.h  HydroState.h  SolverRunBase.cpp  SolverRunBase.h  kokkos_shared.h
src/mood/: Binomial.h  CMakeLists.txt  GeometricTerms.cpp  GeometricTerms.h  Matrix.cpp  Matrix.h  MonomialMap.h  MoodBaseFunctor.h  MoodBaseQuad.cpp  MoodBaseQuad.h  MoodDtFunctor.h  MoodFluxesFunctors.h  MoodFunctors.h  MoodInitFunctors.h  MoodPolynomialReconstructionFunctors.h  MoodTestReconstruction.h  MoodUpdateFunctors.h  Polynomial.cpp  Polynomial.h  QuadratureRules.h  SolverHydroMood.cpp  SolverHydroMood.h  SolverHydroMood2D.h  Stencil.cpp  Stencil.h  StencilUtils.cpp  StencilUtils.h  monomials_ordering.h  monomials_print_utils.h  mood_params.h  mood_shared.h  mood_utils.cpp  mood_utils.h  polynomials_utils.cpp  polynomials_utils.h
src/muscl/: BlastParams.h  CMakeLists.txt  HydroBaseFunctor.h  HydroBaseFunctor2D.h  HydroBaseFunctor3D.h  HydroInitFunctors2D.h  HydroInitFunctors3D.h  HydroParams.cpp  HydroParams.h  HydroRunFunctors2D.h  HydroRunFunctors3D.h  MHDBaseFunctor2D.h  MHDBaseFunctor3D.h  MHDInitFunctors2D.h  MHDInitFunctors3D.h  MHDRunFunctors2D.h  MHDRunFunctors3D.h  MusclDtFunctor.h  SolverBase.cpp  SolverBase.h  SolverFactory.cpp  SolverFactory.h  SolverHydroMuscl.cpp  SolverHydroMuscl.h  SolverHydroMuscl2D.cpp  SolverHydroMuscl2D.h  SolverHydroMuscl3D.cpp  SolverHydroMuscl3D.h  SolverMHDMuscl.cpp  SolverMHDMuscl.h  SolverMHDMuscl2D.cpp  SolverMHDMuscl2D.h  SolverMHDMuscl3D.cpp  SolverMHDMuscl3D.h  SolverMuscl2D.cpp  SolverMuscl2D.h  SolverMuscl3D.cpp  SolverMuscl3D.h  kokkos_shared.h
src/muscl/old/: SolverHydroMuscl2D.cpp  SolverHydroMuscl2D.h  SolverHydroMuscl3D.cpp  SolverMHDMuscl3D.h
src/sdm/: CMakeLists.txt  HydroInitFunctors.h  SDMBaseFunctor.h  SDM_Boundaries_Functors.h  SDM_Boundaries_Functors_Jet.h  SDM_Boundaries_Functors_Wedge.h  SDM_Compute_error.h  SDM_Dt_Functor.h  SDM_Flux_Functors.h  SDM_Flux_with_Limiter_Functors.h  SDM_Geometry.h  SDM_Interpolate_Functors.h  SDM_Interpolate_Functors2.h  SDM_Interpolate_viscous_Functors.h  SDM_Limiter_Functors.h  SDM_Positivity_preserving.h  SDM_Run_Functors.h  SDM_Viscous_Flux_Functors.h  SolverHydroSDM.h  sdm_shared.h
src/sdm/init/: InitBlastFunctor.h  InitFourQuadrantFunctor.h  InitGreshoVortexFunctor.h  InitImplodeFunctor.h  InitIsentropicVortexFunctor.h  InitJetFunctor.h  InitKelvinHelmholtzFunctor.h  InitShuOsherFunctor.h  InitSodFunctor.h  InitWedgeFunctor.h
src/shared/: BoundariesFunctors.h  BoundariesFunctorsWedge.h  CMakeLists.txt  EulerEquations.h  HydroParams.cpp  HydroParams.h  HydroParamsMpi.cpp  HydroParamsMpi.h  HydroState.h  IsentropicVortexParams.h  JetParams.h  KHParams.h  RiemannSolvers.h  RiemannSolvers_MHD.h  SolverBase.cpp  SolverBase.h  SolverFactory.cpp  SolverFactory.h  WedgeParams.h  enums.h  initRiemannConfig2d.h  kokkos_shared.h  mhd_utils.h  mpiBorderUtils.h  real_type.h  solver_utils.h  utils.cpp  utils.h
src/shared/problems/: BlastParams.h  DiskParams.h  FieldLoopParams.h  GreshoParams.h  ImplodeParams.h  IsentropicVortexParams.h  JetParams.h  KHParams.h  OrszagTangParams.h  PointSourceGravity.h  RayleighTaylorInstabilityParams.h  RisingBubbleParams.h  RotorParams.h  WaveParams.h  WedgeParams.h  initRiemannConfig2d.h
src/utils/: CMakeLists.txt
src/utils/config/: CMakeLists.txt  ConfigMap.cpp  ConfigMap.h
src/utils/io/: CMakeLists.txt  IO_HDF5.cpp  IO_HDF5.h  IO_HDF5_SDM.cpp  (+22 more)
test/: CMakeLists.txt  compute_error.py
test/boost-mpi/: CMakeLists.txt
test/configMap/: CMakeLists.txt  ConfigMapTest.cpp  ConfigMapTest_mpi.cpp
test/convergence/: README.md  fulltest.sh  mhd_wave_3D.ini.skel  plot-results.ipynb  plot-results.py
test/io/: CMakeLists.txt  test_io_hdf5.cpp  test_io_pnetcdf.cpp  test_io_vtk.cpp
test/kokkos/: CMakeLists.txt  query_device_kokkos.cpp
test/lapack/: CMakeLists.txt  test_lapacke.cpp  test_lapacke_qr.cpp
test/misc/: Binomial.cpp  qr_standalone.c  qr_standalone.cpp  test_eigen.cpp  test_lapacke_qr.cpp  test_pow.cpp
test/mood/: CMakeLists.txt  test_kokkos_eigen.cpp  test_matrix_qr.cpp  test_monomials_ordering.cpp  test_mood_functor.cpp  test_mood_functor.ini  test_mood_functor_2d.ini  test_mood_functor_3d.ini  test_mood_functor_flux.cpp  test_polynomial.cpp  test_print_monomial_map.cpp  test_reconstruct.cpp  test_reconstruct_2d.cpp  test_reconstruct_3d.cpp  test_stencil.cpp
test/mpiBasic/: CMakeLists.txt  testMpiTopology_2D.cpp  testMpiTopology_2D_C_API.cpp  testMpiTopology_2D_Cpp_API.cpp  testMpiTopology_3D_C_API.cpp  testMpiTopology_3D_Cpp_API.cpp
test/papi/: CMakeLists.txt  PapiInfoTest.cpp
test/sdm/: CMakeLists.txt  SDMTestFunctors.h  test_sdm_average_functor.cpp  test_sdm_chebyshev_quadrature.cpp  test_sdm_compute_dt_functor.cpp  test_sdm_flux.cpp  test_sdm_flux_functor.cpp  test_sdm_flux_functor_2D.ini  test_sdm_flux_functor_3D.ini  test_sdm_flux_functor_init.h  test_sdm_geom.cpp  test_sdm_gradient_velocity.cpp  test_sdm_gradient_velocity.pvsm  test_sdm_gradient_velocity_2D.ini  test_sdm_gradient_velocity_3D.ini  test_sdm_gradient_velocity_init.h  test_sdm_io.cpp  test_sdm_io_2D.ini  test_sdm_io_3D.ini  test_sdm_isentropic_vortex.cpp  test_sdm_lagrange.cpp  test_sdm_lagrange_derivative.cpp  test_sdm_lagrange_derivative_interpolation.cpp  test_sdm_lagrange_flux2sol_derivative_interpolation.cpp  test_sdm_lagrange_functor.cpp  test_sdm_lagrange_sol2flux.cpp  test_sdm_lagrange_sol2sol_derivative.cpp  test_sdm_limiter_2D.ini  test_sdm_limiter_3D.ini  test_sdm_lsq_gradient.cpp
test/shared/: CMakeLists.txt  test_euler_eigen_decomposition.cpp
(+90 files in other folders)
